--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ base64 = "0.13"
 fxhash = "0.2"
 rand = "0.8"
 reqwest = "0.11"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["rt"] }
 tracing = "0.1"
