--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ tokio = { version = "1", features = ["rt"] }
 tracing = "0.1"
 tracing-subscriber = "0.2"
 version = "3.0"
+anyhow = "1.0.42"
 
 [features]
 default = ["default-tls"]
