--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,12 @@ license = "MIT"
 base64 = "0.13"
 fxhash = "0.2"
 rand = "0.8"
-reqwest = {version = "0.11", default-features = false, features = [] }
+reqwest = { version = "0.11", default-features = false, features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["rt"] }
 tracing = "0.1"
-tracing-subscriber = "0.2"
+tracing-subscriber = { version = "0.2", default-features = false }
 version = "3.0"
 anyhow = "1.0.42"
 
