--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["rt"] }
 tracing = "0.1"
-tracing-subscriber = { version = "0.2", default-features = false }
+tracing-subscriber = { version = ">= 0.2.21", default-features = false }
 version = "3.0"
 anyhow = "1.0.42"
 
