--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tracing-elastic-apm"
-version = "3.1.0"
+version = "3.2.0"
 authors = ["Kamil Rojewski <kamil.rojewski@gmail.com>"]
 edition = "2018"
 description = "Elasting APM intake API tracing layer."
@@ -20,7 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["rt"] }
 tracing = "0.1"
-tracing-subscriber = { version = ">= 0.2.21", default-features = false }
+tracing-subscriber = { version = "0.3", default-features = false, features = ["std"] }
 version = "3.0"
 anyhow = "1.0.42"
 
