--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "tracing-elastic-apm"
 version = "3.2.0"
 authors = ["Kamil Rojewski <kamil.rojewski@gmail.com>"]
 edition = "2018"
-description = "Elasting APM intake API tracing layer."
+description = "Elastic APM intake API tracing layer."
 documentation = "https://docs.rs/tracing-elastic-apm"
 homepage = "https://github.com/krojew/tracing-elastic-apm"
 repository = "https://github.com/krojew/tracing-elastic-apm"
