--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,10 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", default-features = false, features = ["std"] }
 version = "3.0"
 anyhow = "1.0.42"
+valuable = { version = "0.1.0", optional = true, features = ["derive"] }
 
 [features]
 default = ["default-tls"]
 default-tls = ["reqwest/default-tls"]
 rustls-tls = ["reqwest/rustls-tls"]
+valuable = ["dep:valuable"]
